# multithread_mm1_sim

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/mm1_sim/: Agent.h  Channel.h  Deprecated.h  GeneratorAgent.h  IChannelReader.h  IChannelWriter.h  Message.h  ServerAgent.h  SinkAgent.h  ThreadSafeRunningStats.h
src/mm1_sim/: GeneratorAgent.cpp  Message.cpp  ServerAgent.cpp  ThreadSafeRunningStats.cpp
tests/: ChannelTest.cpp  SinkAgentTest.cpp
